# Lab2_CMake

./: Application.cpp  CMakeLists.txt  FunctionalObject.cpp  FunctionalObject.h  README.md  output.txt
